syntax = "proto3";

option go_package = "github.com/kjunmin/server/common/api";

package api;

service ProblemsService {
    rpc CreateProblem(CreateProblemRequest) returns (Problem);
    rpc GetProblem(GetProblemRequest) returns (Problem);
}

message Problem {
    optional string problemID = 1;
    repeated string tags = 2;
    string title = 3;
    string description = 4;
}

message GetProblemRequest {
    string problemID = 1;
}

message CreateProblemRequest {
    Problem Problem = 1;
}